159-validation-review (#162)
* FIX:
- When listing modules by type there was a problem.
* FIX: Remove validation FederationEntityDto::issuer
- Delete remove subordinate entity
- Using a jpa converter ta handle List<String>
- More validation rules

* FIX: Validation rules
* FIX: Problems with entity listing endpoint


---------

Co-authored-by: Rickard Nyman <rickard.nyman@digg.se>